// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CveType callout style should show a Kubernetes CVE type in callout style 1`] = `
<DocumentFragment>
  <span
    class="inline-block border rounded font-600 text-center whitespace-nowrap min-h-6 flex justify-center items-center text-base px-2 bg-base-200 border-base-400 text-base-800 capitalize "
    data-testid="label-chip"
  >
    <span>
      Type: Kubernetes CVE
    </span>
  </span>
</DocumentFragment>
`;

exports[`CveType callout style should show a Node and Kubernetes CVE type in default style 1`] = `
<DocumentFragment>
  <span
    class="inline-block border rounded font-600 text-center whitespace-nowrap min-h-6 flex justify-center items-center text-base px-2 bg-base-200 border-base-400 text-base-800 capitalize "
    data-testid="label-chip"
  >
    <span>
      Type: Kubernetes CVE, Node CVE
    </span>
  </span>
</DocumentFragment>
`;

exports[`CveType callout style should show a node CVE type in callout style 1`] = `
<DocumentFragment>
  <span
    class="inline-block border rounded font-600 text-center whitespace-nowrap min-h-6 flex justify-center items-center text-base px-2 bg-base-200 border-base-400 text-base-800 capitalize "
    data-testid="label-chip"
  >
    <span>
      Type: Node CVE
    </span>
  </span>
</DocumentFragment>
`;

exports[`CveType callout style should show an Image and Node CVE type in default style 1`] = `
<DocumentFragment>
  <span
    class="inline-block border rounded font-600 text-center whitespace-nowrap min-h-6 flex justify-center items-center text-base px-2 bg-base-200 border-base-400 text-base-800 capitalize "
    data-testid="label-chip"
  >
    <span>
      Type: Image CVE, Node CVE
    </span>
  </span>
</DocumentFragment>
`;

exports[`CveType callout style should show an Istio CVE type in callout style 1`] = `
<DocumentFragment>
  <span
    class="inline-block border rounded font-600 text-center whitespace-nowrap min-h-6 flex justify-center items-center text-base px-2 bg-base-200 border-base-400 text-base-800 capitalize "
    data-testid="label-chip"
  >
    <span>
      Type: Istio CVE
    </span>
  </span>
</DocumentFragment>
`;

exports[`CveType callout style should show an image CVE type in callout style 1`] = `
<DocumentFragment>
  <span
    class="inline-block border rounded font-600 text-center whitespace-nowrap min-h-6 flex justify-center items-center text-base px-2 bg-base-200 border-base-400 text-base-800 capitalize "
    data-testid="label-chip"
  >
    <span>
      Type: Image CVE
    </span>
  </span>
</DocumentFragment>
`;

exports[`CveType default style should show a Kubernetes CVE type in default style 1`] = `
<DocumentFragment>
  <span>
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-center"
      >
        Kubernetes CVE
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`CveType default style should show a Node and Kubernetes CVE type in default style 1`] = `
<DocumentFragment>
  <span>
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-center"
      >
        Kubernetes CVE
      </div>
      <div
        class="flex justify-center"
      >
        Node CVE
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`CveType default style should show a node CVE type in default style 1`] = `
<DocumentFragment>
  <span>
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-center"
      >
        Node CVE
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`CveType default style should show an Image and Node CVE type in default style 1`] = `
<DocumentFragment>
  <span>
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-center"
      >
        Image CVE
      </div>
      <div
        class="flex justify-center"
      >
        Node CVE
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`CveType default style should show an Istio CVE type in default style 1`] = `
<DocumentFragment>
  <span>
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-center"
      >
        Istio CVE
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`CveType default style should show an image CVE type in default style 1`] = `
<DocumentFragment>
  <span>
    <div
      class="flex flex-col"
    >
      <div
        class="flex justify-center"
      >
        Image CVE
      </div>
    </div>
  </span>
</DocumentFragment>
`;
